--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,14 @@ table.vidbg_metabox tbody.advanced-options {
   display: none;
   border-top: 1px solid #E9E9E9;
 }
+
+
+
+
+.own-slider-field-value-display {
+	float:right;
+	font-weight: 400;
+	font-size: 12px;
+	color: #888;
+	padding-top: .5em;
+}
