--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/***********************
+ Global Styles
+***********************/
+.button.vidbg-button h5 {
+  font-weight: normal;
+  padding: 0;
+}
+
+/***********************
+ jQuery Slider
+***********************/
 .cmb-type-own-slider {
   visibility: hidden;
   /* hide slider until color scheme is applied */
@@ -12,8 +23,6 @@
   display: none;
 }
 
-
-/* Jquery UI slider */
 .cmb-type-own-slider .button-primary {
   height: 15px;
   text-shadow: none;
