--- a/css/vidbg-style.css
+++ b/css/vidbg-style.css
@@ -26,6 +26,13 @@
   display: none;
 }
 
+.postbox-container .cmb2-wrap>.cmb-field-list>.cmb-row.cmb2-id-vidbg-metabox-field-advanced-button {
+  border-top: 1px solid #e9e9e9;
+  padding: 1.8em 0 1.8em 0;
+  margin-top: -0.85em;
+  margin-bottom: 0;
+}
+
 /***********************
  jQuery Slider
 ***********************/
