--- a/css/vidbg-style.css
+++ b/css/vidbg-style.css
@@ -16,37 +16,37 @@
   text-shadow: 0 -1px 1px #1795E2,1px 0 1px #1795E2,0 1px 1px #1795E2,-1px 0 1px #1795E2;
 }
 
-#vidbg_advanced_options,
-.cmb-row {
+#vidbg-metabox #vidbg_advanced_options,
+#vidbg-metabox .cmb-row {
   width: 100% !important;
 }
 
-.cmb-type-file .file-status,
-.cmb-type-file .cmb2-media-status .img-status {
+#vidbg-metabox .cmb-type-file .file-status,
+#vidbg-metabox .cmb-type-file .cmb2-media-status .img-status {
   display: none;
 }
 
 /* Muted pro fields */
-.cmb-row input.disabled,
-.cmb-row input:disabled,
-.cmb-row select.disabled,
-.cmb-row select:disabled,
-.cmb-row textarea.disabled,
-.cmb-row textarea:disabled {
+#vidbg-metabox .cmb-row input.disabled,
+#vidbg-metabox .cmb-row input:disabled,
+#vidbg-metabox .cmb-row select.disabled,
+#vidbg-metabox .cmb-row select:disabled,
+#vidbg-metabox .cmb-row textarea.disabled,
+#vidbg-metabox .cmb-row textarea:disabled {
   background: #f8f8f8;
 }
-.cmb-row input[type=radio].disabled,
-.cmb-row input[type=radio].disabled:checked:before,
-.cmb-row input[type=radio]:disabled,
-.cmb-row input[type=radio]:disabled:checked:before,
-.cmb-row input[type=checkbox].disabled,
-.cmb-row input[type=checkbox].disabled:checked:before,
-.cmb-row input[type=checkbox]:disabled,
-.cmb-row input[type=checkbox]:disabled:checked:before {
+#vidbg-metabox .cmb-row input[type=radio].disabled,
+#vidbg-metabox .cmb-row input[type=radio].disabled:checked:before,
+#vidbg-metabox .cmb-row input[type=radio]:disabled,
+#vidbg-metabox .cmb-row input[type=radio]:disabled:checked:before,
+#vidbg-metabox .cmb-row input[type=checkbox].disabled,
+#vidbg-metabox .cmb-row input[type=checkbox].disabled:checked:before,
+#vidbg-metabox .cmb-row input[type=checkbox]:disabled,
+#vidbg-metabox .cmb-row input[type=checkbox]:disabled:checked:before {
   opacity: .5;
 }
 
-.postbox-container .cmb2-wrap>.cmb-field-list>.cmb-row.cmb2-id-vidbg-metabox-field-advanced-button {
+#vidbg-metabox .cmb2-wrap>.cmb-field-list>.cmb-row.cmb2-id-vidbg-metabox-field-advanced-button {
   border-top: 1px solid #e9e9e9;
   padding: 1.8em 0 1.8em 0;
   margin-top: -0.85em;
@@ -56,12 +56,12 @@
 /***********************
  jQuery Slider
 ***********************/
-.cmb-type-own-slider {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .cmb-type-own-slider {
   visibility: hidden;
   /* hide slider until color scheme is applied */
 }
 
-.own-slider-field-value-display {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .own-slider-field-value-display {
 	float:right;
 	font-weight: 400;
 	font-size: 12px;
@@ -70,30 +70,30 @@
   display: none;
 }
 
-.ui-corner-all {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-corner-all {
   border-radius: 3px;
 }
 
-.ui-slider {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider {
   border: 1px solid #ddd;
   background: #F7F7F7;
   border-radius: 3px;
 }
 
-.ui-slider-horizontal {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-horizontal {
   position: relative;
 }
 
-.ui-slider-horizontal {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-horizontal {
   width: 65%;
   height: 16px;
 }
 
-.ui-slider-handle {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-handle {
   position: absolute;
 }
 
-.ui-slider-handle {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-handle {
   width: 22px;
   height: 22px;
   background: #4FA7B9;
@@ -102,19 +102,19 @@
   cursor: pointer;
 }
 
-.ui-slider-horizontal .ui-slider-handle {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-horizontal .ui-slider-handle {
   top: 50%;
   margin-top: -11px;
   margin-left: -11px;
 }
 
-.ui-slider-range {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-range {
   border: 0;
   border-radius: 1;
   background: #5bb6c9;
 }
 
-.ui-slider-horizontal .ui-slider-range {
+#vidbg-metabox .cmb2-id-vidbg-metabox-field-overlay-alpha .ui-slider-horizontal .ui-slider-range {
   position: relative;
   top: -1px;
   left: -1px;
