--- a/css/pushlabs-vidbg.scss
+++ b/css/pushlabs-vidbg.scss
@@ -35,3 +35,27 @@
   opacity: 1;
   transition: opacity 0.5s ease;
 }
+
+.vidbg-tap-to-unmute {
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-in-out;
+
+  display: flex;
+  align-items: center;
+
+  img {
+    width: 20px;
+    height: 20px;
+    margin-right: 7px;
+  }
+
+  &:hover {
+    background-color: darken( rgba(255, 255, 255, 0.9), 10% );
+  }
+}
